package domain.game;

public enum GameEventType {
    CARD_PLAYED,
    TURN_ENDED,
    GAME_OVER
}